US 1 - Mise en place base de données

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">projetTuPreferes</string>
+    <string name="title_header">Tu préfères ?</string>
 </resources>
