--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="stats_fragment">Statistiques fragment</string>
     <string name="help_fragment">Help fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
