--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="take_photo">Prendre une photo</string>
     <string name="choose_from_gallery">Choisir depuis la galerie</string>
+    <string name="permission_camera_denied">Vous avez refusé l\'accès à la caméra !</string>
+    <string name="permission_read_external_storage_denied">Vous avez refusé l\'accès à la galerie !</string>
 </resources>
